# clips-protobuf

./: CMakeLists.txt  package.xml
cmake/: ClipsProtobufConfig.cmake
include/clips_protobuf/: communicator.h
src/: communicator.cpp
