<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clips_protobuf</name>
  <version>1.0.0</version>
  <description>Wrapper to provide bindings for protobuf_comm</description>

  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>

  <license>GPLv2+ license</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>protobuf</depend>
  <depend>protobuf_comm</depend>
  <depend>spdlog</depend>
  <depend>clips_vendor</depend>
  <depend>pkg-config</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
